test/studies/hpcc/RA/marybeth/ra-uint-test5.good
ra-uint-test5.chpl:3: error: illegal use of '/' on operands of type uint(64) and signed integer
